基本完成啦～差读result文件排序输出了